[tool.poetry]
name = "divisible"
version = "0.1.2"
description = ""
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
